2003/07/18 12:49 muppetman

	* xs/GnomeProgram.xs: change default for the module_info to
	libgnomeui (since that's what most people want) and allow it to
	be omitted.

	* Gnome2.pm META.yml README: bump version number to 0.28 for release

2003/07/11 01:00 muppetman

	* gnomeuiinfo.typemap, gnome2perl.h, Makefile.PL, xs/GnomeAppHelper.xs:
	added support for GnomeUIInfo, and thus for $app->create_menu,
	$app->create_toolbar, and a couple other of the gnome-app-helper.h functions.
	ported the code from gtk-perl to retain some unity in the code, but 
	expect a reference to an array of GnomeUIInfo hashes, not a list of them
	on the stack.

2003/07/05 07:08 pcg

	* META.yml: Add module meta-data in YAML for CPAN.

        * xs/GnomeAppBar.xs, xs/GnomeGConf.xs: use gchar_own* to avoid
        memleak.

2003/07/02 16:12 rwmcfa1

	* maps: removed all of the deprecated widgets, they had no xs files
	so they wouldn't be useful anyway.

	* t/00.Gnome2.t: initial import, just uses the module for now, i.e. 
	makes sure that we don't have undefined symbols and the like

2003/06/20 11:34 muppetman

	* README, Gnome2.pm, Makefile.PL: bump version info and prepare for 
	0.24 release.  yeah, i know this skips 0.22, but it works with other
	0.24 versions.  no one has claimed ownership of Gnome2 and it will
	probably continue to stagnate like this until they do.

2003/06/05 23:11 muppetman

	* maps: removed GnomeCanvas stuff, so that it can go into its own
	module.

2003/05/22 12:00 muppetman

	* AUTHORS, LICENSE, most files: added copyright and license
	information.

2003/05/18 14:00 muppetman

	* ChangeLog: since breaking the monolithic build into pieces, 
	ChangeLog entries for Gnome2 will be in here.  i've included the 
	contents of the toplevel log up to this point for history.

	* MANIFEST: updated for proper make dist

	* Gnome2.pm: bumped up the version number, fixed the synopsis, and
	added an advert for a new author.

	* Makefile.PL: require Gtk2 >= 0.20
