@@ -52,8 +52,8 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
   perl >= 5.8.0
-  Glib >= 0.26 (perl module and requisite C libraries)
-  Gtk2 >= 0.24 (perl module and requisite C libraries)
+  Glib >= 0.90 (perl module and requisite C libraries)
+  Gtk2 >= 0.90 (perl module and requisite C libraries)
   libgnomeui > 2.x (C library)
 
 
